Fix profile icon appears on mobile view

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -115,7 +115,7 @@ header {
   height: 60px;
 }
 
-@media (min-width: 990px) and (max-width: 1350px) {
+@media (min-width: 991px) and (max-width: 1350px) {
   .logo{
     display: flex;
     width: 35%;
